2007-02-06  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/itassert.h: Added missing documentation for macros

	* itpp/base/converters.cpp, itpp/base/converters.h: Fixed Doxygen
	errors and improved the implementation of to_cvec() and to_cmat()
	functions

2007-02-05  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/array.h, itpp/base/binfile.cpp, itpp/base/binfile.h,
	itpp/base/converters.cpp: Documentation fixes related to Doxygen
	warnings and errors

	* itpp/base/algebra/ls_solve.h: Fixed improper declarations of
	ls_solve_od() and ls_solve_ud() methods

	* itpp/base/itfile.h: Replaced "uint32_t" with "unsigned int",
	which is a workaroud for the compilation problem under Cygwin.

2007-02-04  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>

	* itpp/comm/ldpc.cpp, tests/ldpc_test.ref: Updated information
	messages

2007-02-04  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/Makefile.am: Redirecting stderr to /dev/null during "make
	check"

	* itpp/base/itassert.h, itpp/base/itassert.cpp: Added
	it_info_no_endl() and it_info_no_endl_debug() macros, which does
	not append "std::endl" at the end of message.
	
2007-02-03  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/algebra/ls_solve.cpp: Minor fixes to prevent "unused
	variable" warnings when NDEBUG flag is defined.

2007-02-03  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>

	* itpp/base/gf2mat.cpp, itpp/comm/llr.cpp, itpp/comm/ldpc.cpp:
	Updated some assertions and information messages
	
2007-02-02  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/algebra/det.cpp, itpp/base/algebra/eigen.cpp,
	itpp/base/algebra/inv.cpp, itpp/base/algebra/ls_solve.cpp,
	itpp/base/algebra/lu.cpp, itpp/base/algebra/schur.cpp,
	itpp/base/array.h, itpp/base/binary.h,
	itpp/base/circular_buffer.h, itpp/base/converters.cpp,
	itpp/base/gf2mat.cpp, itpp/base/gf2mat.h, itpp/base/mat.cpp,
	itpp/base/matfunc.h, itpp/base/mat.h, itpp/base/operators.cpp,