@@ -60,22 +60,22 @@
 #else
 
 // Common typedefs for most 32- and 64-bit architechures
-typedef signed char             int8_t;
-typedef unsigned char           uint8_t;
-typedef signed short            int16_t;
-typedef unsigned short          uint16_t;
-typedef signed int              int32_t;
-typedef unsigned int            uint32_t;
+typedef signed char             int8_t;	    //!< 8-bit signed integer
+typedef unsigned char           uint8_t;    //!< 8-bit unsigned integer
+typedef signed short            int16_t;    //!< 16-bit signed integer
+typedef unsigned short          uint16_t;   //!< 16-bit unsigned integer
+typedef signed int              int32_t;    //!< 32-bit signed integer
+typedef unsigned int            uint32_t;   //!< 32-bit unsigned integer
 
 #if defined(_MSC_VER)
-typedef __int64                 int64_t;
-typedef unsigned __int64        uint64_t;
+typedef __int64                 int64_t;    //!< 64-bit signed integer
+typedef unsigned __int64        uint64_t;   //!< 64-bit unsigned integer
 #elif (SIZEOF_LONG == 8) && (SIZEOF_UNSIGNED_LONG == 8)
-typedef signed long             int64_t;
-typedef unsigned long           uint64_t;
+typedef signed long             int64_t;    //!< 64-bit signed integer
+typedef unsigned long           uint64_t;   //!< 64-bit unsigned integer
 #elif (SIZEOF_LONG_LONG == 8) && (SIZEOF_UNSIGNED_LONG_LONG == 8)
-typedef signed long long        int64_t;
-typedef unsigned long long      uint64_t;
+typedef signed long long        int64_t;    //!< 64-bit signed integer
+typedef unsigned long long      uint64_t;   //!< 64-bit unsigned integer
 #else
 #  error						\
   64-bit integer type not detected on this platform.	\
