@@ -1,3 +1,8 @@
+2007-02-07  Adam Piatyszek  <ediap@users.sourceforge.net>
+
+	* itpp/base/ittypes.h, itpp/base/mat.h: Fixed Doxygen warnings by
+	adding or correcting the documentation
+
 2007-02-06  Adam Piatyszek  <ediap@users.sourceforge.net>
 
 	* itpp/base/itassert.h: Added missing documentation for macros
